--- a/public/manifest.json
+++ b/public/manifest.json
@@ -1,13 +1,13 @@
 {
-  "name": "Dice",
-  "version": "2.0.0",
+  "name": "DS Dice for OBR",
+  "version": "0.0.1",
   "manifest_version": 1,
-  "author": "Owlbear Rodeo",
-  "homepage_url": "https://extensions.owlbear.rodeo/dice",
+  "author": "Cort-of-KEO",
+  "homepage_url": "https://github.com/cort-of-keo/obr-DS-dice-main/tree/main",
   "icon": "/logo.png",
-  "description": "Beautiful 3D dice extension for d20 based systems",
+  "description": "Dice roller for Draw Steel",
   "action": {
-    "title": "Dice",
+    "title": "DS Dice for OBR",
     "icon": "/icon.svg",
     "popover": "/",
     "height": 700,
