--- a/public/manifest.json
+++ b/public/manifest.json
@@ -4,11 +4,11 @@
   "manifest_version": 1,
   "author": "Cort-of-KEO",
   "homepage_url": "https://github.com/cort-of-keo/obr-DS-dice-main/tree/main",
-  "icon": "/logo.png",
+  "icon": "/DS Dice logo.png",
   "description": "Dice roller for Draw Steel",
   "action": {
     "title": "DS Dice for OBR",
-    "icon": "/icon.svg",
+    "icon": "/d10-svgrepo-com.svg",
     "popover": "/",
     "height": 700,
     "width": 375
